// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textEdge renders 0 1`] = `
Array [
  .c0 {
  text-edge: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-edge: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-edge: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-edge: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textEdge renders function 1`] = `
Array [
  .c0 {
  text-edge: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-edge: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-edge: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-edge: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textEdge renders invalid theme path 1`] = `
Array [
  .c0 {
  text-edge: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-edge: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-edge: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-edge: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textEdge renders negative number 1`] = `
Array [
  .c0 {
  text-edge: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-edge: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-edge: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-edge: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textEdge renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-edge: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-edge: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-edge: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-edge: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-edge: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-edge: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-edge: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-edge: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-edge: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-edge: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-edge: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-edge: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-edge: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-edge: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-edge: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-edge: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textEdge renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    text-edge: July;
  }
}

@media April {
  .c0 {
    text-edge: August;
  }
}

@media January {
  .c0 {
    text-edge: September;
  }
}

@media April {
  .c0 {
    text-edge: November;
  }
}

@media June {
  .c0 {
    text-edge: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-edge: July;
  }
}

@media April {
  .c0 {
    text-edge: August;
  }
}

@media January {
  .c0 {
    text-edge: September;
  }
}

@media April {
  .c0 {
    text-edge: November;
  }
}

@media June {
  .c0 {
    text-edge: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-edge: January;
  }
}

@media April {
  .c0 {
    text-edge: December;
  }
}

@media January {
  .c0 {
    text-edge: April;
  }
}

@media April {
  .c0 {
    text-edge: May;
  }
}

@media June {
  .c0 {
    text-edge: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-edge: January;
  }
}

@media April {
  .c0 {
    text-edge: December;
  }
}

@media January {
  .c0 {
    text-edge: April;
  }
}

@media April {
  .c0 {
    text-edge: May;
  }
}

@media June {
  .c0 {
    text-edge: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textEdge renders postitive number 1`] = `
Array [
  .c0 {
  text-edge: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-edge: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-edge: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-edge: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textEdge renders string 1`] = `
Array [
  .c0 {
  text-edge: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-edge: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-edge: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-edge: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textEdge renders valid theme path 1`] = `
Array [
  .c0 {
  text-edge: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-edge: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-edge: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-edge: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
